tests/baselines/reference/parserParameterList14.errors.txt
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList14.ts(2,7): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList14.ts (1 errors) ====
    declare class C {
      foo(a = 1): void;
          ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    }